[package]

name = "simple_serialize"
version = "0.0.1"
authors = ["Moritz Kaufmann"]

description = "High-throughput serialization and deserialization for some Rust types"

license = "MIT"

# library doesn't depend on time, but [dev-dependencies] doesn't currently seem to cut it for examples/example.rs
[dependencies]

time="0.1.3"

[profile.test]
opt-level = 3
debug = true
rpath = false
lto = false
